# speedport-custom-dyndns

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: docker.yml
src/: dyndns.rs  main.rs  provider.rs  types.rs
src/provider/: cloudflare.rs  netcup.rs
